# kamaboko

./: .gitignore  LICENSE  README.md  setup.cfg
src/: __init__.py  kamaboko.py
src/cli/: __init__.py  command.py  delete.py  install.py  list.py
src/kamaboko/: DisplayFilter.py  PolalityDict.py  Rules.py  __init__.py  kamaboko.py
src/kamaboko/analyzers/: CaboChaAnalyzer.py  __init__.py
src/kamaboko/tokenizers/: MeCabTokenizer.py  __init__.py
test/: __init__.py  display_filter_test.py  kamaboko_test.py  polality_dict_test.py
test/test_resource/: sample_noun_dict.txt
