[metadata]
name = kamaboko
version = 0.0.0
author = takumi furukawa
author_email = black3moon88@gmail.com
description = kamaboko is rule base sentimental analyzer for japanease.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    install_dictionary = cli.install:install
    list_dictionary = cli.list:list